# zxide

./: .gitignore  DEV_PLAN.md  LICENSE  README.md  main.py  pyproject.toml
dev-support/: STATUS.md
tests/integration/: test_asset_pipeline.py  test_boot_screen.py
tests/unit/: bmp_fixtures.py  test_analysis.py  test_asset_build.py  test_audio.py  test_ay.py  test_beeper.py  test_beeper_preview.py  test_beeper_sfx.py  test_beeper_sfx_editor_view.py  test_binary_convert.py  test_bmp.py  test_bmp_convert.py  test_call_stack.py  test_controller.py  test_debug_expr.py  test_disassembler.py  test_emulator_view_fast_render.py  test_emulator_view_keyboard.py  test_emulator_view_rendering.py  test_inspector_view.py  test_interrupt.py  test_keyboard.py  test_machine.py  test_manifest.py  test_memlayout.py  test_memory.py  test_memory_map_view.py  test_native_sprite.py  test_opcodes_base.py  test_opcodes_cb.py  test_opcodes_ed.py  test_opcodes_indexed.py  test_preview.py  test_project.py  test_pt3_convert.py  (+13 more)
zxemu_core/: __init__.py  analysis.py  audio.py  ay.py  beeper.py  disassembler.py  keyboard.py  machine.py  memlayout.py  memory.py  mixer.py  snapshot.py  tape.py  ula.py
zxemu_ui/: __init__.py  analysis_view.py  asset_icons.py  audio_output.py  builder.py  call_stack_view.py  controller.py  disassembly_view.py  editor.py  emulator_panel.py  emulator_view.py  inspector_view.py  layout_store.py  machine_factory.py  main_window.py  memory_cells_view.py  memory_map_view.py  project.py  registers_view.py  settings.py  settings_dialog.py  sld.py  theme.py  z80_highlighter.py
(+68 files in other folders)
